# account-assessment-for-aws-organizations

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
source/lambda/: .coveragerc  pyproject.toml  requirements.txt  testing_requirements.txt
source/lambda/assessment_runner/: api_router.py  assessment_runner.py  job_model.py  jobs_repository.py  jobs_service.py
source/lambda/aws/services/: account.py  acm_private_certificate_authority.py  api_gateway.py  backup.py  cloud_formation.py  code_artifact.py  code_build.py  config.py  dynamodb.py  ec2.py  ec2_container_registry.py  elastic_file_system.py  eventbridge_schemas.py  events.py  glue.py  iam.py  iot.py  key_management_service.py  lambda_functions.py  lexv2.py  media_store.py  open_search.py  organizations.py  ram.py  redshift_serverless.py  s3.py  secrets_manager.py  security_token_service.py  serverless_application_repository.py  simple_email_service_v2.py  sns.py  sqs.py  ssm_contacts.py  ssm_incidents.py  step_functions.py
source/lambda/delegated_admins/: delegated_admin_model.py  delegated_admins_repository.py  read_delegated_admins.py  scan_for_delegated_admins.py
source/lambda/deploy_webui/: deploy_webui.py
source/lambda/manage_cognito_domain/: manage_cognito_domain.py
source/lambda/metrics/: metrics_model.py  solution_metrics.py
source/lambda/policy_explorer/: finish_scan.py  policy_explorer_model.py  policy_explorer_repository.py  read_policies.py  scan_single_service.py  start_state_machine_execution_to_scan_services.py
source/lambda/resource_based_policy/: finish_scan.py  read_resource_based_policies.py  resource_based_policies_repository.py  resource_based_policy_model.py  start_state_machine_execution_to_scan_services.py
source/lambda/tests/: conftest.py  pytest.ini
source/lambda/trusted_access_enabled_services/: read_trusted_services.py  scan_for_trusted_services.py  trusted_access_model.py  trusted_services_repository.py
source/lambda/utils/: api_gateway_lambda_handler.py  base_repository.py  datetime_json_encoder_iso_format.py  decimal_encoder.py  decimal_json_encoder.py  dict_manipulation.py  list_utils.py  pagination_helper.py  pagination_model.py  string_manipulation.py
(+308 files in other folders)
